# compile

./: .gitignore  readme.txt
01_gcc/: rand_demo.c
01_gcc/01_hello/: add.c  add.h
01_gcc/02_gen_use_dynamic/: main.c
02_g++/: readme.txt
02_g++/00_hello/: add.cpp  readme.txt
02_g++/01_gen_use_static/: main.cpp  readme.txt
02_g++/01_gen_use_static/math/: add.cpp
02_g++/02_gen_use_dynamic/: main.cpp  readme.txt
02_g++/02_gen_use_dynamic/math/: add.cpp
02_g++/03_gdb/: main.cpp  readme.txt
02_g++/04_常用函数/: sleep.cpp  usleep.cpp
02_g++/05_宏定义/: fun_mro.cpp
02_g++/06_include/: Makefile  box.h  readme.txt
03_make/01_基础/: Makefile
03_make/02_PHONY/: Makefile  main.cpp
03_make/03_use_static/: link.txt
03_make/03_use_static/math/: power.cpp
03_make/04_default/: readme.txt
04_cmake/01_single/: CMakeLists.txt  readme.txt
04_cmake/02_mul/: CMakeLists.txt  main.cpp  readme.txt
04_cmake/03_mul_sub/: build.sh
04_cmake/03_mul_sub/math/: CMakeLists.txt
04_cmake/04_1_gen_static/: build.sh
04_cmake/04_1_gen_static/math/: power.cpp
04_cmake/04_2_gen_static/: CMakeLists.txt
04_cmake/04_2_gen_static/add/: CMakeLists.txt  add.h
04_cmake/04_3_gen_static/: CMakeLists.txt  main.cpp
04_cmake/04_3_gen_static/add/: CMakeLists.txt
04_cmake/05_use_static/: CMakeLists.txt  readme.txt
04_cmake/06_gen_so/: CMakeLists.txt
04_cmake/07_use_so/: CMakeLists.txt  main.cpp
04_cmake/08_config/: main.cpp
04_cmake/08_config/math/: power.cpp
04_cmake/09_gdb/: config.h.in  readme.txt
04_cmake/09_gdb/math/: power.cpp
04_cmake/11_cpack/math/: power.cpp
05_shell/: 01_echo颜色.sh  10_传参数.sh  11_statistic.sh  kill_activate.sh  listbranch.sh  playpcm.sh  pull_qnx_file.sh  push2qnx.sh  push_apk.sh  temp.sh  toUtf8.sh  unimg.sh  video2img.sh  wifi_switch.sh
06_py_script/: android_memory.py  apk2java.py  broadcast_json.py  img2txt.py  pcm2wav.py  print_byte.py  rename_str.py  rm_android_app.py  sdat2img.py  send_broad.py  switch_source.py  un_update.py  voice.pcm
06_py_script/java/: A.java  B.java
07_linux/: cpp_epoll.cpp  cpp_fork.cpp  cpp_signal.cpp
07_linux/01_ipc之消息队列/: .project  msg_receive.c  send
07_linux/02_ipc之管道/: pipe.cpp  pipe_dump.cpp
07_linux/03_ipc之信号量/: .project
07_linux/04_ipc之共享内存/: .project  read  shmwrite.c  write
07_linux/05_ipc之net_socket/: .project  client  epoll  server  tcp_client_socket.cpp  tcp_epoll_server.cpp  tcp_server_socket.cpp  temp.cpp
07_linux/06_ipc之uds_socket/: client  server  uds_client.c  uds_server.c
07_linux/10_内核调度/: .gitignore  nice.c
07_linux/12_内核mmap/: test_mmap.c
08_operation_system/: demo.c  操作系统.txt
09_assembly/: 03_指令解析.txt  readme.txt  sample.c
10_jni/: readme.txt  test.cpp
cmake/: .gitignore  readme.txt
cmake/01_single/: main.cpp
cmake/02_mul/: power.cpp  power.h
cmake/03_mul_sub/: CMakeLists.txt  readme.txt
cmake/04_2_gen_static/: main.cpp  readme.txt
cmake/04_2_gen_static/add/: add.cpp
cmake/04_3_gen_static/: readme.txt
cmake/04_3_gen_static/add/: add.cpp
cmake/04_gen_static/: CMakeLists.txt  main.cpp
cmake/04_gen_static/math/: CMakeLists.txt
cmake/05_use_static/: main.cpp
cmake/06_gen_so/: readme.txt
cmake/06_gen_so/math/: CMakeLists.txt
cmake/07_use_so/: readme.txt
cmake/08_config/: CMakeLists.txt  config.h  config.h.in  readme.txt
cmake/08_config/math/: CMakeLists.txt
cmake/09_gdb/: CMakeLists.txt  main.cpp
cmake/09_gdb/math/: CMakeLists.txt
cmake/10_check/: CMakeLists.txt  main.cpp  readme.txt
cmake/10_check/math/: CMakeLists.txt
cmake/11_cpack/: CMakeLists.txt  config.h.in  readme.txt
g++/: readme.txt  temp.cpp
g++/00_hello/: main  main.cpp
g++/01_gen_use_static/: main
g++/02_gen_use_dynamic/: main  readme.txt
g++/03_gdb/: main
g++/05_宏定义/: if_mro.cpp
g++/06_include/: box.cpp  cup.cpp  cup.h  main  main.cpp
gcc/: test.c
gcc/01_hello/: main.c
gcc/02_gen_use_dynamic/: main
jni/: com_jiage_Demo.h  run.sh  test.c
jni/com/jiage/: Demo.java
linux/: cpp_fork.cpp  create_thread.c  ipc_概述.txt  readme.txt
linux/01_ipc之消息队列/: msg_receive.c  msg_send.c  rcv  readme.txt
linux/02_ipc之管道/: .project  pipe.cpp  readme.txt
linux/03_ipc之信号量/: 01_semaphore.cpp  02_single_prod_con_cache_1.cpp  03_single_prod_con_cache_n.cpp  04_1_mul_prod_con_cache_n.cpp  04_2_mul_prod_con_cache_n_opt.cpp  main  semaphore.cpp
linux/04_ipc之共享内存/: shmread.c  shmwrite.c  write
linux/05_ipc之socket/: client  epoll  tcp_epoll_server.cpp
linux/06_内核调度/: policy.c
linux/07_内核编程/: Makefile  hello.c  readme.txt
linux/08_内核mmap/: Makefile  mmap_driver.c  readme.txt
linux/09_内核_打印pcb/: Makefile  task_struct.c
make/01_基础/: Makefile  main.cpp
make/02_PHONY/: Makefile
make/03_use_static/: Makefile  main  main.cpp  readme.txt
make/04_default/: Makefile  main.cpp  temp
py_script/: adb_date.py  shoot.py
shell/: 01_echo颜色.sh  02_string.sh  05_read.sh  06_常用变量.sh  07_if.sh  08_for.sh  09_while.sh  getqnx.sh  shoot.sh
upan/: yfautorun.md5  yfautorun.sh
